--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <style>
+            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Roboto+Mono:wght@700&display=swap');
             *{
                 margin: 0;
             }
@@ -22,7 +24,7 @@
             text-decoration: none;
             font-size: 24px;
             line-height: 32px;
-            padding: 10px 15px;
+            padding-top: 15px;
         }
 
             .nav_bar a:hover{
@@ -126,11 +128,18 @@
         .font-size-74px{
             font-size: 74px;
         }
-        .font-size-24px{
-            font-size: 24px;
-        }
+        
+        .font-oswald{
+			font-family: 'Oswald', sans-serif;
 
-                    </style>
+		}
+
+		.font-roboto-bold{
+			font-family: 'Roboto Mono', monospace;
+			font-weight: bold;
+		}
+        
+        </style>
      <title>Gitflow</title>    
 </head> 
     <body>
